@@ -1,5 +1,6 @@
 # Head
 
+- Altered how SUMIFS deals with passed errors in ruby verison (need to check C version)
 - Can now partially replace SUMIFS in situations where it is being used as a form of lookup
 - Refactored AVERAGEIFS and SUMIFS in ruby to be more like C
 - Better error message when named reference can't be parsed
